# process-supervisor

./: .gitignore  Cargo.toml  Makefile  docker-compose.yml
ops/docker/: Makefile  k8s.supervisor.base.Dockerfile  supervisor.Dockerfile  supervisor.coding.Dockerfile
ops/k8s/: Makefile
ops/k8s/minikube/: deployment.yml  namespace.yml  ps-controller-deployment.yml  ps-controller-role.yml  ps-deployment.yml  ps-podmonitor.yml  ps-role.yml  ps-rolebinding.yml  ps-scaledobject.yml  ps-service.yml  ps-serviceaccount.yml  service.yml
ops/k8s/not_used/: ps-controller-rolebinding.yml  ps-controller-serviceaccount.yml
ops/script/: drain-old-pods.sh
src/: dispatcher.rs  env.rs  k8s.rs  lib.rs  main.rs  server.rs  supervisor.rs
src/k8s/: drain_mode_observer.rs  k8s_common.rs  k8s_controller.rs  k8s_supervisor.rs
src/server/: http.rs  mod.rs  route_handler.rs  router.rs  thread_pool.rs
src/server/http/: http_router.rs  http_routes.rs  http_server.rs  mod.rs
src/supervisor/: mod.rs  results.rs  supervisor.rs
worker/: worker.php
