[package]
name = "processes-supervisor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
bytes = "1.6.0"
http-body-util = "0.1.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1.5", features = ["full"] }
matchit = "0.8.2"
memory-stats = "1.1.0"
nix = { version="0.29.0", features = ["signal", "process"] }
procfs = "0.16.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "=1.0.1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
