[package]
name = "processes-supervisor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
bytes = "1.6.0"
http-body-util = "0.1.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1.5", features = ["full"] }
nix = { version = "0.29.0", features = ["signal", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
kube = { version = "0.99.0", features = ["derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
reqwest = { version = "0.12.15", features = ["json"] }

[target.'cfg(any(target_os="linux"))'.dependencies]
procfs = "0.16.0"